# AZ-starting-ragchatbot-codebase

./: .env.example  CLAUDE.md  Git-GitHub-Explained.md  Makefile  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  pyproject.toml  rag_engine.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  helpers.py  test_ai_generator.py  test_api.py  test_rag_engine.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: quality_check.sh
src/quality_demo/: __init__.py  calculator.py  text_utils.py  validators.py
