[project]
name = "quality-demo"
version = "0.1.0"
description = "Code quality tools demonstration"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=8.0.1",
]
